@@ -82,6 +82,7 @@ All (GUI):
 - support for multiple images in one file added to wxImage (TIFF and ICO formats)
 - support for CUR and ANI files in wxImage added (Chris Elliott)
 - wxTextCtrl::GetRange() added
+- added wxGetFontFromUser() convenience function
 
 wxMSW:
 
